<resources>

    <string name="app_name">Insieme</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="userNameText">USER NAME</string>
    <string name="passwordText">PASSWORD</string>
    <string name="LoginButtonText">LOGIN</string>
    <string name="LoginImageDescription">Login image </string>
    <string name="firstNameText">FIRST NAME</string>
    <string name="lastNameText">LAST NAME</string>
    <string name="emailAddressText">EMAIL ADDRESS</string>
    <string name="registerButtonText">REGISTER</string>
    <string name="RegisterImageContentDescription">register image</string>
    <string name="TrackListImageContentDescription">track list image</string>
    <string name="trackNameText">TRACK NAME</string>
    <string name="trackDescriptionText">TRACK DESCRIPTION</string>
    <string name="trackDownloadCountText">DOWNLOAD COUNT</string>
    <string name="trackInfoImageContentDescription">track info image</string>
    <string name="trackSettingsImageContentDescription">track settings image</string>
    <string name="downloadButtonText">DOWNLOAD</string>
    <string name="title_artist">Insieme Artist</string>
    <string name="deleteButtonText">DELETE</string>
    <string name="artistsImageContentDescription">artists image</string>
    <string name="artistInfoImageContentDescription">artist info image</string>
    <string name="artistGenreText">GENRE</string>
    <string name="artistNameText">NAME</string>
    <string name="searchButtonText">SEARCH</string>
    <string name="title_artist_info">Artists</string>
    <string name="artistPageButtonText">ARTIST PAGE</string>
    <string name="updateButtonText">UPDATE</string>
    <string name="artistSearchImageContentDescription">artist search image</string>
    <string name="searchArtistButtonText">FIND ARTISTS</string>
    <string name="myArtistPageImageContentDescription">my artist page image</string>
    <string name="myArtistPageButtonText">GO TO ARTIST PAGE</string>
    <string name="title_user">Insieme User</string>
    <string name="trackIdText">TRACK ID</string>
    <string name="trackGenreText">GENRE</string>
    <string name="trackDownloadLimitText">DOWNLOAD LIMIT</string>
    <string name="uploadButtonText">UPLOAD</string>
    <string name="uploadTrackDescription">DESCRIPTION</string>
    
	
</resources>