<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000" >

    <TextView
        android:id="@+id/passwordTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="466dp"
        android:text="@string/passwordText"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorLink="@android:color/white"
        android:textSize="20dp"
        android1:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/userNameTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordTextId"
        android:layout_alignRight="@+id/passwordTextId"
        android:layout_marginBottom="135dp"
        android:text="@string/userNameText"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorLink="@android:color/white"
        android:textSize="20dp" 
        android1:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/userNameInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userNameTextId"
        android:layout_marginLeft="35dp"
        android:layout_toRightOf="@+id/userNameTextId"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordInputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordTextId"
        android:layout_alignLeft="@+id/userNameInputId"
        android:ems="10"
        android:inputType="numberPassword" >
    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordInputId"
        android:layout_alignRight="@+id/passwordInputId"
        android:layout_below="@+id/passwordInputId"
        android:layout_marginTop="36dp"
        android:text="@string/LoginButtonText"/>

    <ImageView
        android1:id="@+id/loginImageId"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_above="@+id/userNameInputId"
        android1:layout_alignLeft="@+id/userNameInputId"
        android1:layout_marginBottom="31dp"
        android1:contentDescription="@string/LoginImageDescription"
        android1:src="@drawable/login" />

</RelativeLayout>
