<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android1:id="@+id/trackName"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000" >

    <ImageView
        android1:id="@+id/trackListImageId"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_alignParentTop="true"
        android1:layout_marginTop="30dp"
        android1:contentDescription="@string/TrackListImageContentDescription"
        android1:src="@drawable/tracklist" />

    <ScrollView
        android1:id="@+id/trackListScrollViewId"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentLeft="true"
        android1:layout_below="@+id/trackListImageId"
        android1:layout_marginTop="10dp" >

        <LinearLayout
            android1:id="@+id/trackListLayoutId"
            android1:layout_width="362dp"
            android1:layout_height="600dp"
            android1:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android1:id="@+id/trackInfoLayoutId"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignParentRight="true"
        android1:layout_alignTop="@+id/trackListImageId"
        android1:layout_marginBottom="10dp"
        android1:layout_marginRight="209dp" >

        <ImageView
            android1:id="@+id/trackInfoImageId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_alignBottom="@+id/trackListImageId"
            android1:contentDescription="@string/trackInfoImageContentDescription"
            android1:src="@drawable/trackinfo" />

        <TextView
            android1:id="@+id/trackNameTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackInfoImageId"
            android1:text="@string/trackNameText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <TextView
            android1:id="@+id/trackNameValueTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_below="@+id/trackInfoImageId"
            android1:layout_toRightOf="@+id/trackNameTextId"
            android1:text="@string/trackNameText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />

        <TextView
            android1:id="@+id/trackGenreTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackNameTextId"
            android1:text="@string/trackGenreText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <TextView
            android1:id="@+id/trackGenreValueTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_below="@+id/trackNameTextId"
            android1:layout_toRightOf="@+id/trackGenreTextId"
            android1:text="@string/trackGenreText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />

        <TextView
            android1:id="@+id/trackDescriptionTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackGenreTextId"
            android1:text="@string/trackDescriptionText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <TextView
            android1:id="@+id/trackDescriptionValueTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_below="@+id/trackGenreTextId"
            android1:layout_toRightOf="@+id/trackDescriptionTextId"
            android1:text="@string/trackDescriptionText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />

        <TextView
            android1:id="@+id/trackDownloadCountTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackDescriptionTextId"
            android1:text="@string/trackDownloadCountText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <TextView
            android1:id="@+id/trackDownloadCountValueTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_below="@+id/trackDescriptionTextId"
            android1:layout_toRightOf="@+id/trackDownloadCountTextId"
            android1:text="@string/trackDownloadCountText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />
        <Button
	        android:id="@+id/downloadButtonId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/trackDownloadCountTextId"
	        android:layout_alignRight="@+id/trackDownloadCountTextId"
	        android:layout_below="@+id/trackDownloadCountValueTextId"
	        android:layout_marginTop="5dp"
	        android:onClick="downloadTrack"
	        android:text="@string/downloadButtonText" />
    </RelativeLayout>
    <RelativeLayout
        android1:id="@+id/trackSettingsLayoutId"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignLeft="@+id/trackInfoLayoutId"
        android1:layout_below="@+id/trackInfoLayoutId" >

		<ImageView
	        android1:id="@+id/trackSettingsImageId"
	        android1:layout_width="wrap_content"
	        android1:layout_height="wrap_content"
	        android1:layout_marginBottom="20dp"
	        android1:layout_alignRight="@+id/trackInfoImageId"
	        android1:contentDescription="@string/trackSettingsImageContentDescription"
	        android1:src="@drawable/tracksettings" />
        <TextView
            android1:id="@+id/trackSettingsNameTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:text="@string/trackNameText"
            android1:layout_below="@+id/trackSettingsImageId"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />
        <EditText
            android1:id="@+id/trackSettingsNameInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="80dp"
            android1:layout_alignParentRight="true"
            android1:layout_below="@+id/trackSettingsImageId"
            android1:layout_toRightOf="@+id/trackSettingsNameTextId"
            android:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />
        <TextView
            android1:id="@+id/trackSettingsGenreTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackSettingsNameTextId"
            android1:text="@string/trackGenreText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />
        <EditText
            android1:id="@+id/trackSettingsGenreValueInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_alignRight="@+id/trackSettingsNameInputId"
            android1:layout_alignLeft="@+id/trackSettingsNameInputId"
            android1:layout_below="@+id/trackSettingsNameTextId"
            android1:layout_toRightOf="@+id/trackSettingsGenreTextId"
            android:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />
        <TextView
            android1:id="@+id/trackSettingsDescriptionTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackSettingsGenreTextId"
            android1:text="@string/trackDescriptionText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />
        <EditText
            android1:id="@+id/trackSettingsDescriptionInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_alignRight="@+id/trackSettingsNameInputId"
            android1:layout_alignLeft="@+id/trackSettingsNameInputId"
            android1:layout_below="@+id/trackSettingsGenreTextId"
            android1:layout_toRightOf="@+id/trackSettingsDescriptionTextId"
            android:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF" />
        <TextView
            android1:id="@+id/trackSettingsDownloadCountTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android1:layout_below="@+id/trackSettingsDescriptionTextId"
            android1:text="@string/trackDownloadCountText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />
        <EditText
            android1:id="@+id/trackDownloadCountValueInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android1:layout_below="@+id/trackSettingsDescriptionTextId"
            android1:layout_toRightOf="@+id/trackSettingsDownloadCountTextId"
            android1:layout_alignLeft="@+id/trackSettingsNameInputId"
            android1:layout_alignRight="@+id/trackSettingsNameInputId"
            android:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#00FFFF"/>
        <Button
	        android:id="@+id/updateButtonId"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/trackSettingsDownloadCountTextId"
	        android:layout_alignRight="@+id/trackSettingsDownloadCountTextId"
	        android:layout_below="@+id/trackSettingsDownloadCountTextId"
	        android:layout_marginTop="5dp"
	        android:onClick="updateTrack"
	        android:text="@string/updateButtonText" />

        <Button
            android1:id="@+id/deleteButtonId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignBottom="@+id/updateButtonId"
            android1:layout_alignLeft="@+id/trackDownloadCountValueInputId"
            android1:layout_alignRight="@+id/trackSettingsImageId"
            android1:layout_alignTop="@+id/updateButtonId"
            android1:layout_below="@+id/trackDownloadCountValueInputId"
            android1:onClick="deleteTrack"
            android1:text="@string/deleteButtonText" />
        
    </RelativeLayout>

    <RelativeLayout
        android1:id="@+id/uploadTrackLayoutId"
        android1:layout_width="wrap_content"
        android1:layout_height="wrap_content"
        android1:layout_alignBottom="@+id/trackSettingsLayoutId"
        android1:layout_toLeftOf="@+id/trackInfoLayoutId" >

        <ImageView
            android1:id="@+id/upLoadTrackImageId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignTop="@+id/trackSettingsImageId"
            android1:layout_marginBottom="30dp"
            android1:contentDescription="@string/artistSearchImageContentDescription"
            android1:src="@drawable/upload" />

        <TextView
            android1:id="@+id/uploadTrackIdTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_below="@+id/upLoadTrackImageId"
            android1:layout_marginBottom="20dp"
            android1:layout_marginRight="10dp"
            android1:text="@string/trackIdText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <EditText
            android1:id="@+id/uploadTrackIdInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignTop="@+id/uploadTrackIdTextId"
            android1:layout_toRightOf="@+id/uploadTrackIdTextId"
            android1:ems="10"
            android1:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#00FFFF" >
        </EditText>

        <TextView
            android1:id="@+id/uploadTrackNameTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignLeft="@+id/uploadTrackIdTextId"
            android1:layout_below="@+id/uploadTrackIdTextId"
            android1:layout_marginBottom="20dp"
            android1:text="@string/artistNameText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <EditText
            android1:id="@+id/uploadTrackNameInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignLeft="@+id/uploadTrackIdInputId"
            android1:layout_alignTop="@+id/uploadTrackNameTextId"
            android1:layout_toRightOf="@+id/uploadTrackNameTextId"
            android1:ems="10"
            android1:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#00FFFF" />

        <TextView
            android1:id="@+id/uploadTrackGenreTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_below="@+id/uploadTrackNameTextId"
            android1:layout_marginBottom="20dp"
            android1:text="@string/artistGenreText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <EditText
            android1:id="@+id/uploadTrackGenreInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignLeft="@+id/uploadTrackNameInputId"
            android1:layout_alignTop="@+id/uploadTrackGenreTextId"
            android1:layout_toRightOf="@+id/uploadTrackGenreTextId"
            android1:ems="10"
            android1:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#00FFFF" />

        <TextView
            android1:id="@+id/uploadTrackDownloadLimitTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_below="@+id/uploadTrackGenreTextId"
            android1:layout_marginBottom="20dp"
            android1:layout_marginRight="10dp"
            android1:text="@string/trackDownloadLimitText"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <EditText
            android1:id="@+id/uploadTrackDownloadLimitInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignTop="@+id/uploadTrackDownloadLimitTextId"
            android1:layout_toRightOf="@+id/uploadTrackDownloadLimitTextId"
            android1:ems="10"
            android1:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#00FFFF" />

        <TextView
            android1:id="@+id/uploadTrackDescriptionTextId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_below="@+id/uploadTrackDownloadLimitTextId"
            android1:layout_marginBottom="20dp"
            android1:text="@string/uploadTrackDescription"
            android1:textAppearance="?android:attr/textAppearanceLarge"
            android1:textColor="#FFFFFF" />

        <EditText
            android1:id="@+id/uploadTrackDescriptionInputId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignLeft="@+id/uploadTrackDownloadLimitInputId"
            android1:layout_alignTop="@+id/uploadTrackDescriptionTextId"
            android1:layout_toRightOf="@+id/uploadTrackDescriptionTextId"
            android1:ems="10"
            android1:inputType="textPersonName"
            android1:textAppearance="?android:attr/textAppearanceSmall"
            android1:textColor="#00FFFF" />

        <Button
            android1:id="@+id/uploadTrackButtonId"
            android1:layout_width="wrap_content"
            android1:layout_height="wrap_content"
            android1:layout_alignLeft="@+id/uploadTrackNameTextId"
            android1:layout_below="@+id/uploadTrackDescriptionTextId"
            android1:onClick="uploadTrackAction"
            android1:text="@string/uploadButtonText" />
    </RelativeLayout>

</RelativeLayout>